<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/deletemultipleLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/yellow"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="@id/linearLayout2"
            app:layout_constraintRight_toRightOf="@id/linearLayout2"
            app:layout_constraintTop_toTopOf="@id/linearLayout2"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/closeSelect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:src="@android:drawable/ic_delete"
                app:backgroundTint="@color/yellow"
                app:elevation="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/deletemultipleLayout"
                app:layout_constraintEnd_toStartOf="@+id/selectText"
                app:layout_constraintHorizontal_bias="0.027"
                app:layout_constraintLeft_toLeftOf="@id/selectText"
                app:layout_constraintStart_toStartOf="@+id/deletemultipleLayout"
                app:layout_constraintTop_toTopOf="@id/deletemultipleLayout" />

            <TextView
                android:id="@+id/selectText"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginEnd="80dp"
                android:background="@color/ic_launcher_background"
                android:gravity="center"
                android:text="Select the note"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/deletemultipleLayout"
                app:layout_constraintEnd_toStartOf="@+id/selectAll"
                app:layout_constraintTop_toTopOf="@id/deletemultipleLayout"
                app:layout_constraintVertical_bias="0.0" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/selectAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:src="@drawable/baseline_checklist_24"
                app:backgroundTint="@color/yellow"
                app:elevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/yellow"
            android:foregroundGravity="center"
            android:gravity="center|center_horizontal|center_vertical"
            android:pointerIcon="all_scroll"
            android:textAlignment="center"
            android:theme="@style/AppTheme"
            app:buttonGravity="center_vertical"
            app:layout_constraintBottom_toBottomOf="@id/linearLayout2"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="@id/linearLayout2"
            app:layout_constraintRight_toRightOf="@id/linearLayout2"
            app:layout_constraintTop_toTopOf="@id/linearLayout2"
            app:layout_constraintVertical_bias="0.0"
            app:menu="@menu/toolbar"
            app:popupTheme="@style/AppTheme"
            app:title="                       Notes"
            app:titleMarginStart="10dp"
            app:titleTextAppearance="@style/ToolbarTitleTextAppearance"
            app:titleTextColor="#FFFFFF" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="370dp"
            android:layout_height="697dp"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.478"
            app:layout_constraintLeft_toLeftOf="@id/constraintLayout2"
            app:layout_constraintRight_toRightOf="@id/constraintLayout2"
            app:layout_constraintTop_toTopOf="@id/constraintLayout2">

        </androidx.recyclerview.widget.RecyclerView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add"
            android:layout_width="69dp"
            android:layout_height="63dp"
            android:layout_marginTop="564dp"
            android:background="@drawable/baseline_add_24"
            android:clickable="true"
            android:foreground="@drawable/baseline_add_24"
            android:foregroundGravity="center"
            app:backgroundTint="@color/ic_launcher_background"
            app:circularflow_radiusInDP="10dp"
            app:elevation="0dp"
            app:layout_constraintHorizontal_bias="0.851"
            app:layout_constraintLeft_toLeftOf="@id/constraintLayout2"
            app:layout_constraintRight_toRightOf="@id/constraintLayout2"
            app:layout_constraintTop_toTopOf="@id/constraintLayout2" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/deletemultiple"
            android:layout_width="66dp"
            android:layout_height="67dp"
            android:layout_marginTop="560dp"
            android:adjustViewBounds="false"
            android:background="@drawable/baseline_delete_24"
            android:clickable="true"
            android:foreground="@drawable/baseline_delete_24"
            android:foregroundGravity="center"
            app:backgroundTint="@color/ic_launcher_background"
            app:elevation="0dp"
            app:layout_constraintHorizontal_bias="0.859"
            app:layout_constraintLeft_toLeftOf="@id/constraintLayout2"
            app:layout_constraintRight_toRightOf="@id/constraintLayout2"
            app:layout_constraintTop_toTopOf="@id/constraintLayout2"
            app:rippleColor="@color/yellow" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>